Revert "Elvish Outrider description update"
This reverts commit 0e1ed00c99ea6d45effd33c2008cf3a4f743b46c.

--- a/data/core/units/elves/Outrider.cfg
+++ b/data/core/units/elves/Outrider.cfg
@@ -25,7 +25,7 @@ On the fourth day, the sun did not rise. The wolves let out a mighty howl and su
 
 Nearby, a white mare appeared between the trees, her coat as pure and alabaster as the trees from his vision had been. Ryn rose and approached cautiously; the only move she made was to bow to allow him to mount her more easily. The journey back to Lintanir Forest was an odd one — he could have sworn that it was at least a week's ride out into the wilderness, but the white mare took no more than two days to bear him back home. Upon returning, Ryn named her Isáwen and she remained with him for the rest of his days, carrying him faithfully on countless adventures over the passing years. When Ryn finally succumbed to old age over two centuries later, the white mare bore his body one last time back to the forest in the Shakaar mountains, where she disappeared and was never seen again.
 
-Although this legend is mostly told as a children's story, the fact remains that the white horses ridden by Elvish Outriders can only be found in the wild and are invariably female."
+It is unknown just how much of this legend is actually true, but the white horses ridden by Elvish Outriders can only be found in the wild and are invariably female."
     die_sound=horse-die.ogg
     [defense]
         forest=40
