DiD S10: added time over defeat scene

--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -712,7 +712,79 @@
     [event]
         name=time over
 
-        # TODO: add a message explaining defeat
+        [store_unit]
+            [filter]
+                id=Malin Keshar
+            [/filter]
+            variable=keshar
+        [/store_unit]
+
+        [unit]
+            type=Great Mage
+            side=3
+            x,y=33,26
+            id=Telemon
+            name= _ "Telemon the Great"
+            canrecruit=yes
+            animate=yes
+            facing=nw
+        [/unit]
+
+        [unit]
+            type=Silver Mage
+            side=3
+            id=SMage
+            x,y=$keshar.x,$keshar.y
+            animate=yes
+        [/unit]
+        [unit]
+            type=Silver Mage
+            side=3
+            x,y=$keshar.x,$keshar.y
+            animate=yes
+        [/unit]
+        [unit]
+            type=Silver Mage
+            side=3
+            x,y=$keshar.x,$keshar.y
+            animate=yes
+        [/unit]
+        [unit]
+            type=Silver Mage
+            side=3
+            x,y=$keshar.x,$keshar.y
+            animate=yes
+        [/unit]
+
+        [harm_unit]
+            [filter]
+                id=Malin Keshar
+            [/filter]
+            [filter_second]
+                id=SMage
+            [/filter_second]
+            [primary_attack]
+                name=missile
+            [/primary_attack]
+            [secondary_attack]
+                name=missile
+            [/secondary_attack]
+            amount=999
+            animate=yes
+            slowed=yes
+            kill=no
+        [/harm_unit]
+
+        [message]
+            speaker=Telemon
+            message= _ "We've caught the foul necromancer! Excellent work taking him by surprise — I knew I could count on you Silver Magi to get the job done. Let' us return to Wesnoth where we can try him for his crimes against humanity."
+        [/message]
+        [message]
+            speaker=Malin Keshar
+            message= _ "I don't think such a trial will turn out well for me..."
+        [/message]
+
+        {CLEAR_VARIABLE keshar}
     [/event]
 
     # Victory Condition
