--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -713,7 +713,31 @@
     [event]
         name=time over
 
-        # TODO: add a message explaining defeat
+        [unit]
+            type=Paladin
+            side=3
+            x,y=33,26
+            id=Telemon
+            name= _ "Telemon the Slayer"
+            canrecruit=yes
+            animate=yes
+            facing=nw
+        [/unit]
+        {GENERIC_UNIT 3 (Mage of Light) 34 25} {FACING nw}
+        {GENERIC_UNIT 3 (Paladin)       33 25} {FACING nw}
+        {GENERIC_UNIT 3 (Paladin)       32 25} {FACING nw}
+        {GENERIC_UNIT 3 (Paladin)       32 26} {FACING nw}
+        {GENERIC_UNIT 3 (Mage of Light) 33 27} {FACING nw}
+        {GENERIC_UNIT 3 (Mage of Light) 34 26} {FACING nw}
+
+        [message]
+            speaker=Telemon
+            message= _ "Foul necromancer! Your time has come!"
+        [/message]
+        [message]
+            speaker=Malin Keshar
+            message= _ "Reinforcements! I took too long to retrieve that book and now I have no way to win this battle..."
+        [/message]
     [/event]
 
     # Victory Condition
