Update Code::Blocks project and add documentation
Manual merge of pull request #3626.

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -54,6 +54,7 @@
 			<Add library="SDL2" />
 			<Add library="SDL2_image" />
 			<Add library="SDL2_mixer" />
+			<Add library="SDL2_ttf" />
 			<Add library="freetype" />
 			<Add library="ws2_32" />
 			<Add library="shlwapi" />
@@ -65,17 +66,17 @@
 			<Add library="libglib-2.0" />
 			<Add library="liblua" />
 			<Add library="libpng" />
-			<Add library="libboost_iostreams-mgw51-mt-1_64" />
-			<Add library="libboost_bzip2-mgw51-mt-1_64" />
-			<Add library="libboost_filesystem-mgw51-mt-1_64" />
-			<Add library="libboost_locale-mgw51-mt-1_64" />
-			<Add library="libboost_program_options-mgw51-mt-1_64" />
-			<Add library="libboost_random-mgw51-mt-1_64" />
-			<Add library="libboost_regex-mgw51-mt-1_64" />
-			<Add library="libboost_system-mgw51-mt-1_64" />
-			<Add library="libboost_thread-mgw51-mt-1_64" />
-			<Add library="libboost_timer-mgw51-mt-1_64" />
-			<Add library="libboost_zlib-mgw51-mt-1_64" />
+			<Add library="libboost_iostreams" />
+			<Add library="libboost_bzip2" />
+			<Add library="libboost_filesystem" />
+			<Add library="libboost_locale" />
+			<Add library="libboost_program_options" />
+			<Add library="libboost_random" />
+			<Add library="libboost_regex" />
+			<Add library="libboost_system" />
+			<Add library="libboost_thread" />
+			<Add library="libboost_timer" />
+			<Add library="libboost_zlib" />
 			<Add library="libcrypto-1_1" />
 			<Add library="winmm" />
 			<Add library="libole32" />
@@ -88,7 +89,7 @@
 		<Unit filename="../../src/crypt_blowfish/crypt_blowfish.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../../src/crypt_blowfish/crypt_blowfish.h"/>
+		<Unit filename="../../src/crypt_blowfish/crypt_blowfish.h" />
 		<Unit filename="../../src/about.cpp" />
 		<Unit filename="../../src/about.hpp" />
 		<Unit filename="../../src/actions/advancement.cpp" />
@@ -213,14 +214,16 @@
 		<Unit filename="../../src/arrow.hpp" />
 		<Unit filename="../../src/attack_prediction.cpp" />
 		<Unit filename="../../src/attack_prediction.hpp" />
+		<Unit filename="../../src/boilerplate-header.cpp" />
 		<Unit filename="../../src/buffered_istream.hpp" />
 		<Unit filename="../../src/build_info.cpp" />
 		<Unit filename="../../src/build_info.hpp" />
 		<Unit filename="../../src/carryover.cpp" />
+		<Unit filename="../../src/carryover.hpp" />
 		<Unit filename="../../src/chat_command_handler.cpp" />
 		<Unit filename="../../src/chat_command_handler.hpp" />
 		<Unit filename="../../src/chat_events.cpp" />
-		<Unit filename="../../src/chat_events.hpp" />		
+		<Unit filename="../../src/chat_events.hpp" />
 		<Unit filename="../../src/chat_log.cpp" />
 		<Unit filename="../../src/chat_log.hpp" />
 		<Unit filename="../../src/color.cpp" />
@@ -329,12 +332,15 @@
 		<Unit filename="../../src/fake_unit_manager.hpp" />
 		<Unit filename="../../src/fake_unit_ptr.cpp" />
 		<Unit filename="../../src/fake_unit_ptr.hpp" />
-		<Unit filename="../../src/filesystem.hpp" />
 		<Unit filename="../../src/filesystem.cpp" />
+		<Unit filename="../../src/filesystem.hpp" />
 		<Unit filename="../../src/filesystem_common.cpp" />
 		<Unit filename="../../src/filesystem_sdl.cpp" />
+		<Unit filename="../../src/filter_context.hpp" />
 		<Unit filename="../../src/floating_label.cpp" />
 		<Unit filename="../../src/floating_label.hpp" />
+		<Unit filename="../../src/floating_textbox.cpp" />
+		<Unit filename="../../src/floating_textbox.hpp" />
 		<Unit filename="../../src/font/constants.cpp" />
 		<Unit filename="../../src/font/constants.hpp" />
 		<Unit filename="../../src/font/font_config.cpp" />
@@ -445,6 +451,8 @@
 		<Unit filename="../../src/game_launcher.hpp" />
 		<Unit filename="../../src/game_state.cpp" />
 		<Unit filename="../../src/game_state.hpp" />
+		<Unit filename="../../src/game_version.cpp" />
+		<Unit filename="../../src/game_version.hpp" />
 		<Unit filename="../../src/generators/cave_map_generator.cpp" />
 		<Unit filename="../../src/generators/cave_map_generator.hpp" />
 		<Unit filename="../../src/generators/default_map_generator.cpp" />
@@ -459,12 +467,13 @@
 		<Unit filename="../../src/generators/map_generator.hpp" />
 		<Unit filename="../../src/generic_event.cpp" />
 		<Unit filename="../../src/generic_event.hpp" />
-		<Unit filename="../../src/gettext.hpp" />
 		<Unit filename="../../src/gettext.cpp" />
+		<Unit filename="../../src/gettext.hpp" />
 		<Unit filename="../../src/global.hpp" />
 		<Unit filename="../../src/gui/auxiliary/field-fwd.hpp" />
 		<Unit filename="../../src/gui/auxiliary/field.hpp" />
 		<Unit filename="../../src/gui/auxiliary/filter.hpp" />
+		<Unit filename="../../src/gui/auxiliary/find_widget.hpp" />
 		<Unit filename="../../src/gui/auxiliary/iterator/exception.hpp" />
 		<Unit filename="../../src/gui/auxiliary/iterator/iterator.cpp" />
 		<Unit filename="../../src/gui/auxiliary/iterator/iterator.hpp" />
@@ -477,14 +486,14 @@
 		<Unit filename="../../src/gui/auxiliary/iterator/walker_tree_node.hpp" />
 		<Unit filename="../../src/gui/auxiliary/iterator/walker_widget.cpp" />
 		<Unit filename="../../src/gui/auxiliary/iterator/walker_widget.hpp" />
+		<Unit filename="../../src/gui/auxiliary/old_markup.cpp" />
+		<Unit filename="../../src/gui/auxiliary/old_markup.hpp" />
 		<Unit filename="../../src/gui/auxiliary/tips.cpp" />
 		<Unit filename="../../src/gui/auxiliary/tips.hpp" />
 		<Unit filename="../../src/gui/auxiliary/typed_formula.hpp" />
 		<Unit filename="../../src/gui/core/canvas.cpp" />
 		<Unit filename="../../src/gui/core/canvas.hpp" />
 		<Unit filename="../../src/gui/core/canvas_private.hpp" />
-		<Unit filename="../../src/gui/core/gui_definition.cpp" />
-		<Unit filename="../../src/gui/core/gui_definition.hpp" />
 		<Unit filename="../../src/gui/core/event/dispatcher.cpp" />
 		<Unit filename="../../src/gui/core/event/dispatcher.hpp" />
 		<Unit filename="../../src/gui/core/event/dispatcher_private.hpp" />
@@ -493,6 +502,8 @@
 		<Unit filename="../../src/gui/core/event/handler.cpp" />
 		<Unit filename="../../src/gui/core/event/handler.hpp" />
 		<Unit filename="../../src/gui/core/event/message.hpp" />
+		<Unit filename="../../src/gui/core/gui_definition.cpp" />
+		<Unit filename="../../src/gui/core/gui_definition.hpp" />
 		<Unit filename="../../src/gui/core/layout_exception.hpp" />
 		<Unit filename="../../src/gui/core/linked_group_definition.cpp" />
 		<Unit filename="../../src/gui/core/linked_group_definition.hpp" />
@@ -506,10 +517,11 @@
 		<Unit filename="../../src/gui/core/placer/horizontal_list.hpp" />
 		<Unit filename="../../src/gui/core/placer/vertical_list.cpp" />
 		<Unit filename="../../src/gui/core/placer/vertical_list.hpp" />
-		<Unit filename="../../src/gui/core/timer.cpp" />
-		<Unit filename="../../src/gui/core/timer.hpp" />
+		<Unit filename="../../src/gui/core/register_widget.hpp" />
 		<Unit filename="../../src/gui/core/static_registry.cpp" />
 		<Unit filename="../../src/gui/core/static_registry.hpp" />
+		<Unit filename="../../src/gui/core/timer.cpp" />
+		<Unit filename="../../src/gui/core/timer.hpp" />
 		<Unit filename="../../src/gui/core/widget_definition.cpp" />
 		<Unit filename="../../src/gui/core/widget_definition.hpp" />
 		<Unit filename="../../src/gui/core/window_builder.cpp" />
@@ -526,6 +538,8 @@
 		<Unit filename="../../src/gui/dialogs/addon/manager.hpp" />
 		<Unit filename="../../src/gui/dialogs/addon/uninstall_list.cpp" />
 		<Unit filename="../../src/gui/dialogs/addon/uninstall_list.hpp" />
+		<Unit filename="../../src/gui/dialogs/advanced_graphics_options.cpp" />
+		<Unit filename="../../src/gui/dialogs/advanced_graphics_options.hpp" />
 		<Unit filename="../../src/gui/dialogs/attack_predictions.cpp" />
 		<Unit filename="../../src/gui/dialogs/attack_predictions.hpp" />
 		<Unit filename="../../src/gui/dialogs/campaign_difficulty.cpp" />
@@ -592,8 +606,6 @@
 		<Unit filename="../../src/gui/dialogs/help_browser.hpp" />
 		<Unit filename="../../src/gui/dialogs/hotkey_bind.cpp" />
 		<Unit filename="../../src/gui/dialogs/hotkey_bind.hpp" />
-		<Unit filename="../../src/gui/dialogs/ingame_ui_base.cpp" />
-		<Unit filename="../../src/gui/dialogs/ingame_ui_base.hpp" />
 		<Unit filename="../../src/gui/dialogs/label_settings.cpp" />
 		<Unit filename="../../src/gui/dialogs/label_settings.hpp" />
 		<Unit filename="../../src/gui/dialogs/language_selection.cpp" />
@@ -640,6 +652,7 @@
 		<Unit filename="../../src/gui/dialogs/multiplayer/player_info.hpp" />
 		<Unit filename="../../src/gui/dialogs/multiplayer/player_list_helper.cpp" />
 		<Unit filename="../../src/gui/dialogs/multiplayer/player_list_helper.hpp" />
+		<Unit filename="../../src/gui/dialogs/multiplayer/plugin_executor.hpp" />
 		<Unit filename="../../src/gui/dialogs/multiplayer/synced_choice_wait.cpp" />
 		<Unit filename="../../src/gui/dialogs/multiplayer/synced_choice_wait.hpp" />
 		<Unit filename="../../src/gui/dialogs/network_transmission.cpp" />
@@ -742,6 +755,7 @@
 		<Unit filename="../../src/gui/widgets/progress_bar.hpp" />
 		<Unit filename="../../src/gui/widgets/repeating_button.cpp" />
 		<Unit filename="../../src/gui/widgets/repeating_button.hpp" />
+		<Unit filename="../../src/gui/widgets/retval.hpp" />
 		<Unit filename="../../src/gui/widgets/scroll_label.cpp" />
 		<Unit filename="../../src/gui/widgets/scroll_label.hpp" />
 		<Unit filename="../../src/gui/widgets/scrollbar.cpp" />
@@ -796,24 +810,18 @@
 		<Unit filename="../../src/halo.hpp" />
 		<Unit filename="../../src/hash.cpp" />
 		<Unit filename="../../src/hash.hpp" />
-		<Unit filename="../../src/help/constants.cpp" />
-		<Unit filename="../../src/help/constants.hpp" />
 		<Unit filename="../../src/help/help.cpp" />
 		<Unit filename="../../src/help/help.hpp" />
-		<Unit filename="../../src/help/manager.cpp" />
-		<Unit filename="../../src/help/manager.hpp" />
-		<Unit filename="../../src/help/section.cpp" />
-		<Unit filename="../../src/help/section.hpp" />
-		<Unit filename="../../src/help/section_generators.cpp" />
-		<Unit filename="../../src/help/section_generators.hpp" />
-		<Unit filename="../../src/help/topic.cpp" />
-		<Unit filename="../../src/help/topic.hpp" />
-		<Unit filename="../../src/help/topic_generators.cpp" />
-		<Unit filename="../../src/help/topic_generators.hpp" />
-		<Unit filename="../../src/help/topic_text_generators.cpp" />
-		<Unit filename="../../src/help/topic_text_generators.hpp" />
-		<Unit filename="../../src/help/utils.cpp" />
-		<Unit filename="../../src/help/utils.hpp" />
+		<Unit filename="../../src/help/help_browser.cpp" />
+		<Unit filename="../../src/help/help_browser.hpp" />
+		<Unit filename="../../src/help/help_impl.cpp" />
+		<Unit filename="../../src/help/help_impl.hpp" />
+		<Unit filename="../../src/help/help_menu.cpp" />
+		<Unit filename="../../src/help/help_menu.hpp" />
+		<Unit filename="../../src/help/help_text_area.cpp" />
+		<Unit filename="../../src/help/help_text_area.hpp" />
+		<Unit filename="../../src/help/help_topic_generators.cpp" />
+		<Unit filename="../../src/help/help_topic_generators.hpp" />
 		<Unit filename="../../src/hotkey/command_executor.cpp" />
 		<Unit filename="../../src/hotkey/command_executor.hpp" />
 		<Unit filename="../../src/hotkey/hotkey_command.cpp" />
@@ -828,8 +836,6 @@
 		<Unit filename="../../src/hotkey/hotkey_item.hpp" />
 		<Unit filename="../../src/hotkey/hotkey_manager.cpp" />
 		<Unit filename="../../src/hotkey/hotkey_manager.hpp" />
-		<Unit filename="../../src/picture.cpp" />
-		<Unit filename="../../src/picture.hpp" />
 		<Unit filename="../../src/image_modifications.cpp" />
 		<Unit filename="../../src/image_modifications.hpp" />
 		<Unit filename="../../src/joystick.cpp" />
@@ -878,6 +884,9 @@
 		<Unit filename="../../src/map/location.hpp" />
 		<Unit filename="../../src/map/map.cpp" />
 		<Unit filename="../../src/map/map.hpp" />
+		<Unit filename="../../src/map_command_handler.hpp" />
+		<Unit filename="../../src/map_settings.cpp" />
+		<Unit filename="../../src/map_settings.hpp" />
 		<Unit filename="../../src/menu_events.cpp" />
 		<Unit filename="../../src/menu_events.hpp" />
 		<Unit filename="../../src/minimap.cpp" />
@@ -911,6 +920,8 @@
 		<Unit filename="../../src/persist_manager.hpp" />
 		<Unit filename="../../src/persist_var.cpp" />
 		<Unit filename="../../src/persist_var.hpp" />
+		<Unit filename="../../src/picture.cpp" />
+		<Unit filename="../../src/picture.hpp" />
 		<Unit filename="../../src/play_controller.cpp" />
 		<Unit filename="../../src/play_controller.hpp" />
 		<Unit filename="../../src/playmp_controller.cpp" />
@@ -958,6 +969,7 @@
 		<Unit filename="../../src/save_blocker.cpp" />
 		<Unit filename="../../src/save_blocker.hpp" />
 		<Unit filename="../../src/save_index.cpp" />
+		<Unit filename="../../src/save_index.hpp" />
 		<Unit filename="../../src/saved_game.cpp" />
 		<Unit filename="../../src/saved_game.hpp" />
 		<Unit filename="../../src/savegame.cpp" />
@@ -1039,8 +1051,8 @@
 		<Unit filename="../../src/serialization/unicode.hpp" />
 		<Unit filename="../../src/serialization/validator.cpp" />
 		<Unit filename="../../src/serialization/validator.hpp" />
-		<Unit filename="../../src/map_settings.cpp" />
-		<Unit filename="../../src/map_settings.hpp" />
+		<Unit filename="../../src/show_dialog.cpp" />
+		<Unit filename="../../src/show_dialog.hpp" />
 		<Unit filename="../../src/side_filter.cpp" />
 		<Unit filename="../../src/side_filter.hpp" />
 		<Unit filename="../../src/sound.cpp" />
@@ -1153,20 +1165,20 @@
 		<Unit filename="../../src/utils/name_generator_factory.cpp" />
 		<Unit filename="../../src/utils/name_generator_factory.hpp" />
 		<Unit filename="../../src/utils/reference_counter.hpp" />
-		<Unit filename="../../src/utils/smart_list.hpp" />
 		<Unit filename="../../src/utils/scope_list.hpp" />
+		<Unit filename="../../src/utils/smart_list.hpp" />
 		<Unit filename="../../src/utils/type_trait_aliases.hpp" />
 		<Unit filename="../../src/variable.cpp" />
 		<Unit filename="../../src/variable.hpp" />
 		<Unit filename="../../src/variable_info.cpp" />
 		<Unit filename="../../src/variable_info.hpp" />
+		<Unit filename="../../src/variable_info_detail.hpp" />
 		<Unit filename="../../src/variable_info_private.hpp" />
-		<Unit filename="../../src/game_version.cpp" />
-		<Unit filename="../../src/game_version.hpp" />
 		<Unit filename="../../src/video.cpp" />
 		<Unit filename="../../src/video.hpp" />
 		<Unit filename="../../src/wesconfig.h" />
 		<Unit filename="../../src/wesnoth.cpp" />
+		<Unit filename="../../src/wesnoth_lua_config.h" />
 		<Unit filename="../../src/wesnothd_connection.cpp" />
 		<Unit filename="../../src/wesnothd_connection.hpp" />
 		<Unit filename="../../src/wesnothd_connection_error.hpp" />
@@ -1194,10 +1206,22 @@
 		<Unit filename="../../src/whiteboard/utility.cpp" />
 		<Unit filename="../../src/whiteboard/utility.hpp" />
 		<Unit filename="../../src/whiteboard/visitor.hpp" />
+		<Unit filename="../../src/widgets/button.cpp" />
+		<Unit filename="../../src/widgets/button.hpp" />
+		<Unit filename="../../src/widgets/menu.cpp" />
+		<Unit filename="../../src/widgets/menu.hpp" />
+		<Unit filename="../../src/widgets/menu_style.cpp" />
+		<Unit filename="../../src/widgets/scrollarea.cpp" />
+		<Unit filename="../../src/widgets/scrollarea.hpp" />
+		<Unit filename="../../src/widgets/scrollbar.cpp" />
+		<Unit filename="../../src/widgets/scrollbar.hpp" />
+		<Unit filename="../../src/widgets/textbox.cpp" />
+		<Unit filename="../../src/widgets/textbox.hpp" />
 		<Unit filename="../../src/widgets/widget.cpp" />
 		<Unit filename="../../src/widgets/widget.hpp" />
 		<Unit filename="../../src/wml_exception.cpp" />
 		<Unit filename="../../src/wml_exception.hpp" />
+		<Unit filename="../../src/wml_separators.hpp" />
 		<Unit filename="../../src/xBRZ/xbrz.cpp" />
 		<Unit filename="../../src/xBRZ/xbrz.hpp" />
 		<Extensions>
@@ -1207,4 +1231,3 @@
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
-
