--- a/projectfiles/VC14/wesnoth.vcxproj.filters
+++ b/projectfiles/VC14/wesnoth.vcxproj.filters
@@ -592,7 +592,7 @@
     </ClCompile>
     <ClCompile Include="..\..\src\gui\dialogs\game_stats.cpp">
       <Filter>Gui\Dialogs</Filter>
-    </ClCompile
+    </ClCompile>
     <ClCompile Include="..\..\src\gui\dialogs\game_version_dialog.cpp">
       <Filter>Gui\Dialogs</Filter>
     </ClCompile>
