DiD S10: changed time over defeat scene

--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -711,80 +711,32 @@
 
     [event]
         name=time over
-
-        [store_unit]
-            [filter]
-                id=Malin Keshar
-            [/filter]
-            variable=keshar
-        [/store_unit]
-
+        
         [unit]
-            type=Great Mage
+            type=Paladin
             side=3
             x,y=33,26
             id=Telemon
-            name= _ "Telemon the Great"
+            name= _ "Telemon the Slayer"
             canrecruit=yes
             animate=yes
             facing=nw
         [/unit]
-
-        [unit]
-            type=Silver Mage
-            side=3
-            id=SMage
-            x,y=$keshar.x,$keshar.y
-            animate=yes
-        [/unit]
-        [unit]
-            type=Silver Mage
-            side=3
-            x,y=$keshar.x,$keshar.y
-            animate=yes
-        [/unit]
-        [unit]
-            type=Silver Mage
-            side=3
-            x,y=$keshar.x,$keshar.y
-            animate=yes
-        [/unit]
-        [unit]
-            type=Silver Mage
-            side=3
-            x,y=$keshar.x,$keshar.y
-            animate=yes
-        [/unit]
-
-        [harm_unit]
-            [filter]
-                id=Malin Keshar
-            [/filter]
-            [filter_second]
-                id=SMage
-            [/filter_second]
-            [primary_attack]
-                name=missile
-            [/primary_attack]
-            [secondary_attack]
-                name=missile
-            [/secondary_attack]
-            amount=999
-            animate=yes
-            slowed=yes
-            kill=no
-        [/harm_unit]
-
+        {GENERIC_UNIT 3 (Mage of Light) 34 25} {FACING nw}
+        {GENERIC_UNIT 3 (Paladin)       33 25} {FACING nw}
+        {GENERIC_UNIT 3 (Paldain)       32 25} {FACING nw}
+        {GENERIC_UNIT 3 (Paladin)       32 26} {FACING nw}
+        {GENERIC_UNIT 3 (Mage of Light) 33 27} {FACING nw}
+        {GENERIC_UNIT 3 (Mage of Light) 34 26} {FACING nw}
+        
         [message]
             speaker=Telemon
-            message= _ "We've caught the foul necromancer! Excellent work taking him by surprise — I knew I could count on you Silver Magi to get the job done. Let' us return to Wesnoth where we can try him for his crimes against humanity."
+            message= _ "Foul necromancer! Your time has come!"
         [/message]
         [message]
             speaker=Malin Keshar
-            message= _ "I don't think such a trial will turn out well for me..."
+            message= _ "Reinforcements! I took too long to retrieve that book and now I have no way to win this battle..."
         [/message]
-
-        {CLEAR_VARIABLE keshar}
     [/event]
 
     # Victory Condition
