THoT S12: small QOL changes

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
@@ -97,7 +97,7 @@
         {RECRUITS_MASKED_DWARVES}
 
         gold=0 # Will change when the side is activated
-        {INCOME 6 10 14}
+        {INCOME 9 13 17}
         team_name=evil
         user_team_name= _ "Masked Dwarves"
         {FLAG_VARIANT knalgan}
@@ -130,7 +130,7 @@
         {RECRUITS_MASKED_DWARVES}
 
         gold=0 # Will change when the side is activated
-        {INCOME 14 18 22}
+        {INCOME 11 15 19}
         team_name=evil
         user_team_name= _ "Masked Dwarves"
         {FLAG_VARIANT knalgan}
@@ -159,7 +159,7 @@
         {RECRUITS_MASKED_DWARVES}
 
         gold=0 # Will change when the side is activated
-        {INCOME 14 18 22}
+        {INCOME 11 15 19}
         team_name=evil
         user_team_name= _ "Masked Dwarves"
         {FLAG_VARIANT knalgan}
@@ -441,6 +441,12 @@
                 name=unit.id
                 equals=Aiglondur
             [/variable]
+            [or]
+                [variable]
+                    name=unit.id
+                    equals=Angarthing
+                [/variable]            
+            [/or]
             [then]
                 [message]
                     speaker=unit
@@ -492,12 +498,6 @@
             speaker=Angarthing
             message= _ "Let us proceed onward."
         [/message]
-
-        # Activate side 3
-        [gold]
-            side=3
-            amount={ON_DIFFICULTY 100 150 200}
-        [/gold]
     [/event]
 
     [event]
@@ -513,6 +513,12 @@
                 name=unit.id
                 equals=Aiglondur
             [/variable]
+            [or]
+                [variable]
+                    name=unit.id
+                    equals=Angarthing
+                [/variable]            
+            [/or]
             [then]
                 [message]
                     speaker=unit
@@ -603,6 +609,12 @@
             speaker=second_unit
             message= _ "You could not stop us before and you won't be stopping us now!"
         [/message]
+        
+        # Activate side 3
+        [gold]
+            side=3
+            amount={ON_DIFFICULTY 70 120 170}
+        [/gold]
     [/event]
 
     [event]
@@ -647,7 +659,7 @@
         # Give side 4 some gold
         [gold]
             side=4
-            amount={ON_DIFFICULTY 50 75 100}
+            amount={ON_DIFFICULTY 75 100 125}
         [/gold]
     [/event]
 
@@ -668,7 +680,7 @@
         # Give side 5 some gold
         [gold]
             side=5
-            amount={ON_DIFFICULTY 50 75 100}
+            amount={ON_DIFFICULTY 75 100 125}
         [/gold]
     [/event]
     #########################################################################################
@@ -1190,7 +1202,7 @@
 
         [message]
             speaker=Karrag
-            message= _ "Pah! Any enemy of my rule is no better than the filthiest of dirtgrubbers. You no longer belong to the true people. You will become my slaves!"
+            message= _ "Any enemy of my rule is no better than the filthiest of dirtgrubbers. You no longer belong to the true people. You will become my slaves!"
         [/message]
 
         [message]
@@ -1262,6 +1274,7 @@
 
         [endlevel]
             result=victory
+            carryover_report=no
         [/endlevel]
     [/event]
     #########################################################################################
@@ -1286,7 +1299,7 @@
 
         [message]
             speaker=Dranath
-            message= _ "Argh! Imbeciles! Once the master's dark rite is complete, I will return to slay you myself!"
+            message= _ "Imbeciles! Once the master's dark rite is complete, I will return to slay you myself!"
         [/message]
     [/event]
 
@@ -1333,7 +1346,7 @@
 
         [message]
             speaker=Aiglondur
-            message= _ "Argh! I feel as if the life is being sapped out of my body!"
+            message= _ "I feel as if the life is being sapped out of my body!"
         [/message]
 
         [message]
