DiD S10 Fix typo in unit type

--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -724,7 +724,7 @@
         [/unit]
         {GENERIC_UNIT 3 (Mage of Light) 34 25} {FACING nw}
         {GENERIC_UNIT 3 (Paladin)       33 25} {FACING nw}
-        {GENERIC_UNIT 3 (Paldain)       32 25} {FACING nw}
+        {GENERIC_UNIT 3 (Paladin)       32 25} {FACING nw}
         {GENERIC_UNIT 3 (Paladin)       32 26} {FACING nw}
         {GENERIC_UNIT 3 (Mage of Light) 33 27} {FACING nw}
         {GENERIC_UNIT 3 (Mage of Light) 34 26} {FACING nw}
