SoF 7: split reinforcements into separate event
[ci skip]

--- a/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
@@ -208,6 +208,15 @@
             [/have_unit]
         [/filter_condition]
 
+        [fire_event]
+            name=reinforcements
+        [/fire_event]
+    [/event]
+
+    [event]
+        name=reinforcements
+        first_time_only=no
+
         [store_unit]
             [filter]
                 id=Alanin
