SoF 7: explain the Outriders
[ci skip]

--- a/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
@@ -197,7 +197,7 @@
     # More outriders will come if there are too few of them
     [event]
         name=die
-        first_time_only=no
+        first_time_only=yes
         [filter]
             side=2
         [/filter]
@@ -208,9 +208,87 @@
             [/have_unit]
         [/filter_condition]
 
+        [message]
+            speaker=second_unit
+            message= _ "Great, now there is no need to worry about those elves anymore!"
+        [/message]
+
         [fire_event]
             name=reinforcements
         [/fire_event]
+
+        [message]
+            role=newcomer
+            message= _ "Did you really think that you could escape us? Don’t underestimate us, inferior humans!"
+            scroll=no
+        [/message]
+
+        [if]
+            [have_unit]
+                side=1
+                count=1
+            [/have_unit]
+            [then]
+                [message]
+                    id=Alanin
+                    message= _ "Even though my chances have grown worse, I have to fulfil my duty. I do not owe them any less!"
+                [/message]
+            [/then]
+            [else]
+                [role]
+                    role=fighter
+                    id=$second_unit.id
+                    [not]
+                        id=Alanin
+                    [/not]
+                    search_recall_list=no
+                    [else]
+                        [role]
+                            role=fighter
+                            side=1
+                            [not]
+                                id=Alanin
+                            [/not]
+                            search_recall_list=no
+                        [/role]
+                    [/else]
+                [/role]
+
+                [message]
+                    id=Alanin
+                    message= _ "Oh no, more of them? And there I thought I could catch my breath…"
+                [/message]
+
+                [message]
+                    role=fighter
+                    message= _ "Don’t worry sir, we’ll make it through this!"
+                [/message]
+            [/else]
+        [/if]
+
+        # Fire the event the next time with different dialoge
+        [event]
+            name=die
+            first_time_only=no
+            [filter]
+                side=2
+            [/filter]
+            [filter_condition]
+                [have_unit]
+                    side=2
+                    count=0-2
+                [/have_unit]
+            [/filter_condition]
+
+            [fire_event]
+                name=reinforcements
+            [/fire_event]
+
+            [message]
+                id=Alanin
+                message= _ "Is there no end to their numbers?"
+            [/message]
+        [/event]
     [/event]
 
     [event]
@@ -249,11 +327,21 @@
         [/move_unit_fake]
 
         {GENERIC_UNIT 2 "Elvish Outrider" $outriders_loc[0].x $outriders_loc[0].y}
+        [+unit]
+            role=newcomer
+        [/unit]
         {GENERIC_UNIT 2 "Elvish Outrider" $outriders_loc[0].x $outriders_loc[0].y}
         {GENERIC_UNIT 2 "Elvish Outrider" $outriders_loc[0].x $outriders_loc[0].y}
         {GENERIC_UNIT 2 "Elvish Outrider" $outriders_loc[0].x $outriders_loc[0].y}
 
         {CLEAR_VARIABLE alanin,outriders_loc}
+
+        [lift_fog]
+            [filter]
+                role=newcomer
+            [/filter]
+            radius=1
+        [/lift_fog]
     [/event]
 
     [event]
