--- a/data/core/about.cfg
+++ b/data/core/about.cfg
@@ -1366,7 +1366,7 @@
         name = "Kevin Montalva (Ryckes)"
     [/entry]
     [entry]
-        name = "Konrad2"
+        name = "Konrad Schwede (Konrad2)"
     [/entry]
     [entry]
         name = "Kristoffer Grönlund (kegie)"
