--- a/data/core/about_i18n.cfg
+++ b/data/core/about_i18n.cfg
@@ -782,6 +782,9 @@ sort=yes
         name = "Kai Ensenbach"
     [/entry]
     [entry]
+        name = "Konrad Schwede (Konrad2)"
+    [/entry]
+    [entry]
         name = "Marcel Miebach (retr0virus)"
         email = "marcel_miebach_AT_gmx.de"
     [/entry]
