THoT S12: added translation comment

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
@@ -1200,6 +1200,7 @@
             message= _ "No! You are the one who owes our brethren their freedom! You have ensnared their minds with your foul magic and now we are here to put an end to your tyrannical rule!"
         [/message]
 
+        # po: Karrag uses dirtgrubber here as a derogatory racial term, i.e. to show that he believes dwarves are the "true people"/master race, and that other races are just scum. Dirtgrubber is made up of the words "dirt" and "grub". 
         [message]
             speaker=Karrag
             message= _ "Any enemy of my rule is no better than the filthiest of dirtgrubbers. You no longer belong to the true people. You will become my slaves!"
