SotBE S4: Add some visual effect
We'll now see the elves coming out of the wood, while they
just appeared on the screen before.

--- a/data/campaigns/Son_Of_The_Black_Eye/scenarios/04_The_Siege_of_Barag_Gor.cfg
+++ b/data/campaigns/Son_Of_The_Black_Eye/scenarios/04_The_Siege_of_Barag_Gor.cfg
@@ -358,6 +358,13 @@
             message= _ "KILL HIM!!"
         [/message]
 
+        [move_unit_fake]
+            side=5
+            type=Elvish Fighter
+            x=28,29
+            y= 6, 6
+        [/move_unit_fake]
+
         [unit]
             type=Elvish Fighter
             side=5
@@ -365,7 +372,15 @@
             y=6
             generate_name=yes
             random_traits=yes
+            facing=ne
         [/unit]
+
+        [move_unit_fake]
+            side=5
+            type=Elvish Fighter
+            x=28,29
+            y= 7, 8
+        [/move_unit_fake]
 
         [unit]
             type=Elvish Fighter
@@ -374,6 +389,7 @@
             y=8
             generate_name=yes
             random_traits=yes
+            facing=ne
         [/unit]
 
         [message]
