SotBE: Update role tag usage

--- a/data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg
+++ b/data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg
@@ -115,22 +115,14 @@
             role=Helper
             type=Wolf Rider, Orcish Archer, Orcish Grunt, Orcish Warrior, Orcish Crossbowman, Goblin Knight, Goblin Pillager, Orcish Warlord, Orcish Slurbow, Direwolf Rider
             side=1
+            search_recall_list=no
             [not]
                 id="Kapou'e,Vrag"
             [/not]
-            x=1-99
-        [/role]
-
-        [if]
-            [not]
-                [have_unit]
-                    role=Helper
-                [/have_unit]
-            [/not]
-            [then]
+            [else]
                 {UNIT 1 (Orcish Grunt) 16 3 (role=Helper)}
-            [/then]
-        [/if]
+            [/else]
+        [/role]
 
         [if]
             [have_unit]
