--- a/data/campaigns/Son_Of_The_Black_Eye/scenarios/04_The_Siege_of_Barag_Gor.cfg
+++ b/data/campaigns/Son_Of_The_Black_Eye/scenarios/04_The_Siege_of_Barag_Gor.cfg
@@ -216,6 +216,11 @@
         [role]
             type=Direwolf Rider,Goblin Knight,Goblin Pillager,Wolf Rider
             role=Scout
+            [auto_recall]
+            [/auto_recall]
+            [else]
+                {UNIT 1 "Wolf Rider" 36 3 role="Scout"}
+            [/else]
         [/role]
 
         [store_unit]
@@ -224,28 +229,6 @@
             [/filter]
             variable=scout
         [/store_unit]
-
-        [if]
-            [variable]
-                name=scout.length
-                greater_than=0
-            [/variable]
-
-            [then]
-                [recall]
-                    role=Scout
-                    x,y=36,3
-                [/recall]
-            [/then]
-
-            [else]
-                {GENERIC_UNIT 1 "Wolf Rider" 36 3}
-                [+unit]
-                    role=Scout
-                    to_variable=scout
-                [/unit]
-            [/else]
-        [/if]
 
         [message]
             speaker=narrator
