--- a/data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg
+++ b/data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg
@@ -216,22 +216,18 @@
         [role]
             type=Orcish Warlord,Troll Warrior,Orcish Warrior,Troll,Orcish Grunt
             role=cannonfodder
+            [auto_recall]
+                x,y=18,11
+            [/auto_recall]
         [/role]
-        [recall]
-            role=cannonfodder
-            x=18
-            y=11
-        [/recall]
 
         [role]
             role=cannonfodder2
             type=Orcish Crossbowman,Orcish Slayer,Orcish Archer,Orcish Assassin
+            [auto_recall]
+                x,y=20,11
+            [/auto_recall]
         [/role]
-        [recall]
-            role=cannonfodder2
-            x=20
-            y=11
-        [/recall]
 
         {RENAME_IF_DEAD thelarion_dead Thelarion (_"Telamir")}
         {RENAME_IF_DEAD darstang_dead Darstang (_"Angthur")}
