--- a/data/campaigns/Son_Of_The_Black_Eye/scenarios/03_Toward_Mountains_of_Haag.cfg
+++ b/data/campaigns/Son_Of_The_Black_Eye/scenarios/03_Toward_Mountains_of_Haag.cfg
@@ -127,22 +127,12 @@
         [role]
             type=Orcish Warlord, Orcish Slurbow, Direwolf Rider, Orcish Warrior, Orcish Crossbowman, Goblin Knight, Goblin Pillager, Orcish Grunt, Orcish Archer, Wolf Rider
             role=Helper
-        [/role]
-
-        [if]
-            [have_unit]
-                role=Helper
-                search_recall_list=yes
-            [/have_unit]
-            [then]
-                [recall]
-                    role=Helper
-                [/recall]
-            [/then]
+            [auto_recall]
+            [/auto_recall]
             [else]
                 {UNIT 1 (Orcish Grunt) 35 23 (role=Helper)}
             [/else]
-        [/if]
+        [/role]
 
         [message]
             speaker="Kapou'e"
